Performance improvements + changed folder structure

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,18 +5,9 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="popup.css"/>
 
-    <script
-        src="jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-        crossorigin="anonymous"></script>
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="../dependencies/bootstrap_cstm.min.css" integrity="sha384-/Eq7D4g1GIRZnSNsvC6FKWZ20+ur+KU5hunt5T9zoya2r/gTezPWfkWClHwQUAsX" crossorigin="anonymous">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
 
 <body class="w3-theme">  
@@ -32,7 +23,10 @@
     <ul class="list-group hits" id="hits" style="display:none">
 
     </ul>
-
+<script
+        src="../dependencies/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+        crossorigin="anonymous"></script>
   <script src="popup.js"></script>
 </body>
 
