--- a/Yobi.html
+++ b/Yobi.html
@@ -1,15 +1,7 @@
 <html><head><meta charset="utf8">
-
-
-
-
-
-
-	<script src="libyara-wasm.js"></script>
-<script src="sjcl.js"></script>
+<script src="dependencies/libyara-wasm.js"></script>
+<script src="dependencies/sjcl.js"></script>
 <script src="yobi.js"></script>
-	
-</script>
 </head>
 <body></body>
 </html>
